test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-sync-no-creation-upon-generated-resource/chainsaw-step-02-assert-1-1.yaml
apiVersion: v1
kind: Secret
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
    generate.kyverno.io/policy-name: cpol-data-sync-no-creation-upon-generated-resource
    generate.kyverno.io/rule-name: generate-otel-secret-config
    generate.kyverno.io/trigger-group: ""
    generate.kyverno.io/trigger-kind: Secret
    generate.kyverno.io/trigger-name: otel-collector-signalfx-token
    generate.kyverno.io/trigger-namespace: cpol-data-sync-no-creation-upon-generated-resource-ns
    generate.kyverno.io/trigger-version: v1
  name: otel-collector-signalfx-secret
  namespace: cpol-data-sync-no-creation-upon-generated-resource-ns
type: Opaque
