test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-sync-no-creation-upon-generated-resource/chainsaw-step-02-error-1-1.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: otel-collector-signalfx-sa
  namespace: cpol-data-sync-no-creation-upon-generated-resource-ns
